--- a/GoodDeeds_Interface/MainPage.xaml
+++ b/GoodDeeds_Interface/MainPage.xaml
@@ -152,7 +152,7 @@
             <Button Style="{DynamicResource ButtonStyle2}" Content="..." Height="50" Margin="0,0,11,0" VerticalAlignment="Center" FontFamily="Inter" FontSize="20" HorizontalAlignment="Right" Width="79"/>
         </Border>
         <Button Style="{DynamicResource ButtonStyle1}" Content="Календарь" HorizontalAlignment="Left" Height="50" VerticalAlignment="Center" Width="193" FontFamily="Inter" FontSize="22" IsEnabled="False" Margin="432,0,0,0"/>
-        <Button Style="{DynamicResource ButtonStyle1}" Content="Посты" HorizontalAlignment="Left" Height="50" VerticalAlignment="Center" Width="193" FontFamily="Inter" FontSize="22" Margin="222,0,0,0"/>
+        <Button Name="Posts_Button" Style="{DynamicResource ButtonStyle1}" Content="Посты" HorizontalAlignment="Left" Height="50" VerticalAlignment="Center" Width="193" FontFamily="Inter" FontSize="22" Margin="222,0,0,0" Click="Posts_Button_Click"/>
         <Button Style="{DynamicResource ButtonStyle1}" Content="Задачи" HorizontalAlignment="Left" Height="50" VerticalAlignment="Center" Width="193" FontFamily="Inter" FontSize="22" IsEnabled="False" Margin="10,0,0,0"/>
         <Frame Name="MainPageFrame" Content="" Grid.Row="1" Grid.ColumnSpan="2" NavigationUIVisibility="Hidden"/>
 
